namespaces-apps/k8s-dashboard/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: k8s-dashboard
  labels:
    name: k8s-dashboard
