namespaces-apps/k8s-dashboard/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kubernetes-dashboard
  namespace: k8s-dashboard
spec:
  hostnames:
    - dashboard.piron.homelab
  parentRefs:
    - name: eg
      namespace: envoy-gateway-system
      sectionName: https
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: kubernetes-dashboard-kong-proxy
          port: 80
---
# apiVersion: gateway.networking.k8s.io/v1
# kind: BackendTLSPolicy
# metadata:
#   name: kubernetes-dashboard-tls
#   namespace: k8s-dashboard
# spec:
#   targetRefs:
#     - group: ""
#       kind: Service
#       name: kubernetes-dashboard-kong-proxy
#       sectionName: kong-proxy-tls

#   validation:
#     hostname: kubernetes-dashboard-kong-proxy.k8s-dashboard.svc.cluster.local
#     wellKnownCACertificates: System
